add endpoint cost
